updated CV section

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@ layout: master.html
         I take projects from inception through completion and can assist in all
         stages of design and development.
         <br><br><br>
-        <a href="#/cv" class="btn btn-border" onclick="window.JL.achievements.activateAchievement('SAAVYRECRUITER')">download my CV</a>
+        <a href="#/cv" class="btn btn-border" onclick="window.JL.achievements.activateAchievement('RECRUITER')">view my CV</a>
        </p>
      </div>
      <div class="content_img_box no-select">
