updates to achievements

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@ layout: master.html
        </p>
      </div>
      <div class="content_img_box no-select">
-       <a class="img_handle" onmouseover="window.JL.achievements.activateAchievement('HOVERER')"></a>
+       <a class="img_handle" onmouseover="window.JL.achievements.activateAchievement('HOVERER')" id="hover-picture"></a>
        <img src="/img/me.png" class="content_img lightbox">
      </div>
    </div>
@@ -79,7 +79,7 @@ layout: master.html
       <p class="tagline">This website was built by hand using node, npm, Sass, HTML, JavaScript, Uglify, Autoprefixer, cleanCSS, Handlbebars, Metalsmith, Atom, and MAMP.
 
         <br><br><br>
-        <a href="#/cv" class="btn btn-border">view the source</a>
+        <a href="https://github.com/ovdojoey/JL16-2" target="_blank" class="btn btn-border" onclick="window.JL.achievements.activateAchievement('USETHESOURCE')">view the source</a>
        </p>
      </div>
      <div class="content_img_box no-select">
