--- a/src/index.html
+++ b/src/index.html
@@ -27,17 +27,18 @@ layout: master.html
       <h1 class="headline scrollnimate" data-magic-number="-21">PROJECTS</h1>
       <div class="subline scrollnimate"  data-magic-number="46"><a href="#/cv" class="btn btn-border">View all</a></div>
       <div class="projects">
-        <a class="project juiced">
+
+        <a class="project juiced" href="/portfolio/juiced/">
           <div class="project_content">
             <h3 class="title">Juiced</h3>
           </div>
         </a>
-        <a class="project active pates-law ">
+        <a class="project active pates-law" href="/portfolio/pates-law/">
           <div class="project_content">
             <h3 class="title">Pates Law</h3>
           </div>
         </a>
-        <a class="project pouk">
+        <a class="project pouk" href="/portfolio/promo-only-uk/">
           <div class="project_content">
             <h3 class="title">Promo Only UK</h3>
           </div>
