updates added portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@ layout: master.html
 <div class="section-group">
   <div class="content">
       <h1 class="headline scrollnimate" data-magic-number="-21">PROJECTS</h1>
-      <div class="subline scrollnimate"  data-magic-number="46"><a href="#/cv" class="btn btn-border">View all</a></div>
+      <div class="subline scrollnimate"  data-magic-number="46"><a href="/portfolio/" class="btn btn-border">View all</a></div>
       <div class="projects">
 
         <a class="project juiced" href="/portfolio/juiced/">
@@ -52,7 +52,7 @@ layout: master.html
     <div class="content_text">
       <h1 class="headline scrollnimate">MUSIC</h1>
         <div id="key-landing">
-          <p class="tagline">I create everything in my bedroom studio with a small collection of gear.
+          <p class="tagline">I enjoy making music and create everything in my bedroom studio with a small collection of gear.
             <br><br><br>
             <a class="btn btn-border" href="https://soundcloud.com/joey-lea/" target="_blank">Listen on SoundCloud</a>
             <br><br>
@@ -85,7 +85,7 @@ layout: master.html
      </div>
      <div class="content_img_box no-select">
        <a class="img_handle" onmouseover="window.JL.achievements.activateAchievement('HOVERER')" onclick="window.JL.pictures.hueRotate('color_blot_picture')"></a>
-       <img src="/img/color_blot.jpg" id="color_blot_picture" class="content_img" data-rotation="0">
+       <img src="/img/leaves.jpeg" id="color_blot_picture" class="content_img" data-rotation="0">
      </div>
    </div>
 </div>
