--- a/src/portfolio/index.html
+++ b/src/portfolio/index.html
@@ -6,7 +6,7 @@ layout: master.html
 <div class="section-group">
   <div class="content">
     <div class="content_text">
-      <h1 class="headline scrollnimate portfolio-headline" data-magic-number="-8"><small>an in-progress</small> PORTFOLIO</h1>
+      <h1 class="headline scrollnimate portfolio-headline" data-magic-number="-8">PORTFOLIO</h1>
       <ul class="portfolio-list" class="headline scrollnimate" data-magic-number="-9">
         <a href="/portfolio/juiced/">
           <li>Juiced</li>
