--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,18 @@ layout: master.html
   <div class="content">
     <div class="content_text">
       <h1 class="headline scrollnimate" data-magic-number="-8" id="main-header">Hi, I'm Joey</h1>
-      <p class="tagline scrollnimate" data-magic-number="-5"  id="main-tagline">I am a creative full-stack engineer.
+      <p class="tagline  thin scrollnimate" data-magic-number="-5" >I am a creative full-stack developer.
         I write code in JavaScript, HTML, Sass, and PHP.
-        <br><br>
-        I take projects from inception through completion and can assist in all
+      </p>
+      <p class="tagline  thin scrollnimate" data-magic-number="-5" >I take projects from inception through completion and can assist in all
         stages of design and development.
         <br><br><br>
-        <a href="#/cv" class="btn btn-border" onclick="window.JL.achievements.activateAchievement('RECRUITER')">view my CV</a>
-       </p>
+        <a href="/contact/" class="btn btn-border">Contact Me</a>
+        &nbsp;
+        <a href="/portfolio/" class="btn btn-border">My Portfolio</a>
+        &nbsp;
+        <a href="#/cv" class="btn btn-border" onclick="window.JL.achievements.activateAchievement('RECRUITER')">My CV</a>
+      </p>
      </div>
      <div class="content_img_box no-select">
        <a class="img_handle" onmouseover="window.JL.achievements.activateAchievement('HOVERER')" id="hover-picture"></a>
