--- a/src/portfolio/index.html
+++ b/src/portfolio/index.html
@@ -1,13 +1,24 @@
 ---
-title: Joey Lea | Digital Creative
+title: Portfolio | Joey Lea | Digital Creative
 layout: master.html
 ---
-
-<div class="section-group">
+<div class="heading-links" id="heading-links-fixed">
+  <nav>
+    <a href="/">JL</a>
+    <a href="#" class="active">Portfolio</a>
+  </nav>
+</div>
+<div class="section-group portfolio">
   <div class="content">
     <div class="content_text">
       <h1 class="headline scrollnimate portfolio-headline" data-magic-number="-8">PORTFOLIO</h1>
       <ul class="portfolio-list" class="headline scrollnimate" data-magic-number="-9">
+        <a href="/portfolio/jl-v2/">
+          <li>JL v2</li>
+        </a>
+        <a href="/portfolio/frnkrok/">
+          <li>Frnkrok</li>
+        </a>
         <a href="/portfolio/juiced/">
           <li>Juiced</li>
         </a>
@@ -23,6 +34,9 @@ layout: master.html
         <a href="/portfolio/timeline/">
           <li>Timeline</li>
         </a>
+        <a href="/portfolio/jl-v1/">
+          <li>JL v1</li>
+        </a>
         <a href="/portfolio/welli/">
           <li>Welli</li>
         </a>
@@ -37,6 +51,9 @@ layout: master.html
         </a>
         <a href="/portfolio/pom/">
           <li>POM - Orders Management</li>
+        </a>
+        <a href="/portfolio/mobile-beat/">
+          <li>Mobile Beat</li>
         </a>
       </ul>
      </div>
