updates to JL16, added contact

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@ title: Joey Lea | Digital Creative
 layout: master.html
 ---
 
+<nav class="header-nav position-absolute">
+  <a href="/" class="active">HOME</a>
+  <a href="/portfolio">PORTFOLIO</a>
+  <a href="/contact">CONTACT</a>
+</nav>
 <div class="section-group">
   <div class="content">
     <div class="content_text">
@@ -13,11 +18,9 @@ layout: master.html
       <p class="tagline  thin scrollnimate" data-magic-number="-5" >I take projects from inception through completion and can assist in all
         stages of design and development.
         <br><br><br>
-        <a href="/contact/" class="btn btn-border">Contact Me</a>
+        <a href="/portfolio/" class="btn btn-border">View Portfolio</a>
         &nbsp;
-        <a href="/portfolio/" class="btn btn-border">My Portfolio</a>
-        &nbsp;
-        <a href="#/cv" class="btn btn-border" onclick="window.JL.achievements.activateAchievement('RECRUITER')">My CV</a>
+        <a href="#/cv" class="btn btn-border" onclick="window.JL.achievements.activateAchievement('RECRUITER')">View CV</a>
       </p>
      </div>
      <div class="content_img_box no-select">
