--- a/src/portfolio/frnkrok/index.html
+++ b/src/portfolio/frnkrok/index.html
@@ -1,6 +1,7 @@
 ---
 title: FRNKROK | Joey Lea | Portfolio
 layout: master.html
+body: frnkrok
 ---
 
 <div class="heading-links" id="heading-links-fixed">
