--- a/src/portfolio/index.html
+++ b/src/portfolio/index.html
@@ -2,7 +2,12 @@
 title: Portfolio | Joey Lea | Digital Creative
 layout: master.html
 ---
-<div class="heading-links" id="heading-links-fixed">
+<nav class="header-nav">
+  <a href="/">HOME</a>
+  <a href="/portfolio" class="active">PORTFOLIO</a>
+  <a href="/contact">CONTACT</a>
+</nav>
+<div class="heading-links scroll" id="heading-links-fixed">
   <nav>
     <a href="/">JL</a>
     <a href="#" class="active">Portfolio</a>
