--- a/src/portfolio/juiced/index.html
+++ b/src/portfolio/juiced/index.html
@@ -1,6 +1,7 @@
 ---
 title: Juiced | Joey Lea | Portfolio
 layout: master.html
+body: juiced
 ---
 
 <div class="heading-links" id="heading-links-fixed">
