--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -2,7 +2,12 @@
 title: Contact | Joey Lea | Digital Creative
 layout: master.html
 ---
-<div class="heading-links" id="heading-links-fixed">
+<nav class="header-nav">
+  <a href="/">HOME</a>
+  <a href="/portfolio">PORTFOLIO</a>
+  <a href="/contact" class="active">CONTACT</a>
+</nav>
+<div class="heading-links scroll" id="heading-links-fixed">
   <nav>
     <a href="/">JL</a>
     <a href="#" class="active">Contact</a>
@@ -15,7 +20,7 @@ layout: master.html
       <p class="tagline  thin scrollnimate" data-magic-number="-5" >
         Feel free to give me a buzz via email at JOEY.L@W3BY.COM.
         <br><small><br>- or -<br></small><br>
-        fill out the form below and I will persuade my computer assistant to send it for you.
+        fill out the form below and I will have FRM send it for you.
        </p>
     </div>
    </div>
@@ -23,22 +28,188 @@ layout: master.html
 <div class="section-group">
   <div class="content">
     <div class="content_text">
-      <h1 class="headline scrollnimate portfolio-headline" data-magic-number="-8">Meet A,<small>He will be helping us today</small></h1>
+      <h1 class="headline scrollnimate portfolio-headline" data-magic-number="-8">Meet FRM,<small>He will be helping us today</small></h1>
+      <div class="frm-robot scrollnimate" data-magic-number="-3.5">
+        <?xml version="1.0" encoding="utf-8"?>
+        <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+        <svg version="1.1" id="robot" class="chilling" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        	 viewBox="0 0 2363.5 3101.4" style="enable-background:new 0 0 2363.5 3101.4;" xml:space="preserve">
+        <g id="XMLID_3464_">
+        	<g id="XMLID_3677_">
+        		<circle id="XMLID_3732_" class="st0" cx="1618.2" cy="1201.7" r="178.3"/>
+        		<circle id="XMLID_3731_" class="st0" cx="636.6" cy="1201.7" r="178.3"/>
+        		<g id="XMLID_3740_">
+        			<circle id="XMLID_3745_" class="st0" cx="1555.4" cy="2598.5" r="73"/>
+        			<circle id="XMLID_3744_" class="st0" cx="1472.6" cy="2287" r="73"/>
+        			<g id="XMLID_3742_">
+        				<polygon id="XMLID_3743_" class="st0" points="1434.8,2912.4 1372.3,2880.3 1520.4,2591.7 1456,2296.4 1524.7,2281.4
+        					1594.4,2601.4 				"/>
+        			</g>
+        			<path id="XMLID_3741_" class="st0" d="M1439.5,2828.4c-80.1,0-146,61-153.8,139.1h307.5
+        				C1585.5,2889.4,1519.7,2828.4,1439.5,2828.4z"/>
+        		</g>
+        		<g id="XMLID_3734_">
+        			<circle id="XMLID_3739_" class="st0" cx="743" cy="2598.5" r="73"/>
+        			<circle id="XMLID_3738_" class="st0" cx="825.8" cy="2287" r="73"/>
+        			<g id="XMLID_3736_">
+        				<polygon id="XMLID_3737_" class="st0" points="863.6,2912.4 704,2601.4 773.7,2281.5 842.4,2296.4 778,2591.7 926.1,2880.3
+        					"/>
+        			</g>
+        			<path id="XMLID_3735_" class="st0" d="M844.8,2828.4c80.1,0,146,61,153.8,139.1H691.1C698.8,2889.4,764.7,2828.4,844.8,2828.4z"
+        				/>
+        		</g>
+        		<path id="XMLID_3733_" class="st0" d="M1524.8,2287.5H755.7l-157-940.7c-42.1-252,134.5-484.1,368.3-484.1h346.6
+        			c233.7,0,410.3,232.1,368.3,484.1L1524.8,2287.5z"/>
+        		<g id="XMLID_3706_">
+        			<path id="XMLID_3730_" class="st0" d="M1140.3,1202.6L1140.3,1202.6c-117.1,0-212.8-95.8-212.8-212.8V631.3
+        				c0-117.1,95.8-212.8,212.8-212.8h0c117.1,0,212.8,95.8,212.8,212.8v358.5C1353.1,1106.8,1257.3,1202.6,1140.3,1202.6z"/>
+        			<g id="XMLID_3727_">
 
+        					<rect id="XMLID_3728_" x="1081.8" y="339.8" transform="matrix(6.123234e-17 -1 1 6.123234e-17 795.8684 1501.6975)" class="st0" width="133.9" height="26.3"/>
+        				<circle id="XMLID_3729_" class="st1" cx="1148.8" cy="257" r="53.8"/>
+        			</g>
+        			<g id="XMLID_3717_">
+        				<path id="XMLID_3726_" class="st2" d="M1197.2,338.6c6.9,13.8,13,28,13,28s1.7-0.9,4.1-2.3c2.4-1.6,5.5-3.7,8.7-5.8
+        					c6-4.6,11.7-9.7,11.7-9.7s-11.8-10-23-20.7c-4.9-4.7-9.7-9.4-13.5-13.4c-3,2.6-6.1,5.1-9.5,7.2
+        					C1191.2,326.7,1194.2,332.6,1197.2,338.6z"/>
+        				<path id="XMLID_3725_" class="st2" d="M1086.9,328.3c-11.1,10.9-22.6,21.1-22.6,21.1s5.7,5,11.7,9.6c3.2,2.1,6.3,4.2,8.7,5.7
+        					c2.4,1.5,4.1,2.3,4.1,2.3s5.9-14.3,12.5-28.2c2.9-6.1,5.9-12,8.4-16.8c-3.4-2.1-6.5-4.6-9.5-7.2
+        					C1096.5,318.7,1091.8,323.5,1086.9,328.3z"/>
+        				<path id="XMLID_3724_" class="st2" d="M1057.3,278.2c-15.3,2.3-30.7,3.8-30.7,3.8s1.3,7.5,3.8,14.6c2.2,7.2,5.5,14.1,5.5,14.1
+        					s13.2-8.2,26.9-15.5c6.1-3.3,12.2-6.4,17.1-8.8c-1.4-3.6-2.6-7.4-3.5-11.3C1071,276,1064.2,277.2,1057.3,278.2z"/>
+        				<path id="XMLID_3723_" class="st2" d="M1062.8,220.2c-13.7-7.1-27.1-15-27.1-15s-3.1,6.9-5.4,14.1c-1,3.6-2.1,7.3-2.8,10
+        					c-0.5,2.8-0.9,4.7-0.9,4.7s15.4,1.2,30.7,3.3c7.2,0.9,14.4,2.1,20,3.1c1-3.8,2-7.5,3.6-11
+        					C1075.7,226.8,1069.2,223.6,1062.8,220.2z"/>
+        				<path id="XMLID_3722_" class="st2" d="M1101.2,176.5c-6.9-13.8-13-28-13-28s-1.7,0.9-4.1,2.3c-2.4,1.6-5.5,3.7-8.7,5.8
+        					c-6,4.6-11.7,9.7-11.7,9.7s11.8,10,23,20.7c5.5,5.3,10.9,10.7,14.9,14.8c2.9-2.4,5.9-4.7,9.2-6.6
+        					C1108.1,190.2,1104.6,183.4,1101.2,176.5z"/>
+        				<path id="XMLID_3721_" class="st2" d="M1154.8,184.9c0.8-5.7,1.9-13.4,3.2-21c2.5-15.2,5.9-30.4,5.9-30.4s-7.6-1-15.1-0.8
+        					c-7.6-0.1-15.1,1-15.1,1s3.7,15.1,6.4,30.2c1.4,7.6,2.6,15.3,3.5,21c1.9-0.1,3.7-0.6,5.6-0.6
+        					C1151.1,184.3,1152.9,184.7,1154.8,184.9z"/>
+        				<path id="XMLID_3720_" class="st2" d="M1211.4,186.9c11.1-10.9,22.6-21.1,22.6-21.1s-5.7-5-11.7-9.6c-3.2-2.1-6.3-4.2-8.7-5.7
+        					c-2.4-1.5-4.1-2.3-4.1-2.3s-5.9,14.3-12.5,28.2c-3.3,6.9-6.8,13.7-9.5,18.8c3.3,2,6.3,4.2,9.2,6.6
+        					C1200.7,197.7,1206,192.2,1211.4,186.9z"/>
+        				<path id="XMLID_3719_" class="st2" d="M1241,237c15.3-2.3,30.7-3.8,30.7-3.8s-1.3-7.5-3.8-14.6c-2.2-7.2-5.5-14.1-5.5-14.1
+        					s-13.2,8.2-26.9,15.5c-6.4,3.5-12.8,6.7-17.9,9.3c1.5,3.5,2.6,7.3,3.6,11C1226.7,239.3,1233.8,238.1,1241,237z"/>
+        				<path id="XMLID_3718_" class="st2" d="M1241.2,277.9c-6.9-0.9-13.8-2-19.3-2.9c-0.9,3.9-2.1,7.7-3.5,11.3
+        					c5,2.4,11.1,5.4,17.2,8.7c13.7,7.1,27.1,15,27.1,15s3.1-6.9,5.4-14.1c1-3.6,2.1-7.3,2.8-10c0.5-2.8,0.9-4.7,0.9-4.7
+        					S1256.4,280,1241.2,277.9z"/>
+        			</g>
+        			<circle id="XMLID_3716_" class="st0" cx="1150.5" cy="430.2" r="48.9"/>
+
+        				<ellipse id="XMLID_3715_" transform="matrix(0.8264 -0.5631 0.5631 0.8264 70.6834 701.5879)" class="st3" cx="1173.2" cy="236.2" rx="12" ry="23.5"/>
+        			<circle id="XMLID_3714_" class="st3" cx="1184" cy="271.9" r="8.1"/>
+        			<g id="XMLID_3711_">
+        				<circle id="XMLID_3713_" class="st3" cx="1024.1" cy="675" r="39.3"/>
+        				<circle id="XMLID_3712_" class="st2" cx="1024.1" cy="675" r="21.6"/>
+        			</g>
+        			<g id="XMLID_3708_">
+        				<circle id="XMLID_3710_" class="st3" cx="1265.4" cy="675" r="39.3"/>
+        				<circle id="XMLID_3709_" class="st2" cx="1265.4" cy="675" r="21.6"/>
+        			</g>
+        			<path id="XMLID_3707_" class="st3" d="M1189.9,747.7h-93.5c12.3,11.4,28.6,18.6,46.7,18.6S1177.6,759.1,1189.9,747.7z"/>
+        		</g>
+        		<g id="XMLID_3700_">
+        			<path id="XMLID_3705_" class="st0" d="M2017.5,1653.7c-8.4-20.9-15.2-42.2-25.3-62.2c-19-40.3-36.1-80.3-57.6-116.7
+        				c-10.4-18.3-19.6-36.8-30.4-53.9c-10.9-17-21.5-33.7-31.8-49.9c-9.9-16.4-21.4-31.2-31.9-45.9c-10.8-14.4-20.3-28.9-31.1-41.7
+        				c-21-26-40.2-49.5-58.8-69.1c-17.7-20.3-35.1-36.2-48.6-49.9c-28.2-26.3-45.7-39.6-45.7-39.6s15.1,15.9,38.4,46.1
+        				c11.1,15.6,25.3,33.7,39.3,56.3c14.9,21.8,29.7,47.8,45.7,75.9c8.3,13.8,15.2,29.4,23.2,44.9c7.7,15.6,16.3,31.4,23.1,48.6
+        				c7.3,16.9,14.7,34.4,22.3,52.1c7.5,17.8,13.3,36.8,20.2,55.6c14.5,37.3,24.3,77.7,35.8,117.8c6.3,19.9,9.3,41,13.9,61.5
+        				c2.6,12.7,7.9,42,12,65.4c2.9,16.9,19.8,27.5,36.3,23l54.8-15c16.2-4.4,25.3-21.7,19.7-37.6
+        				C2033.1,1696.4,2022.5,1666.9,2017.5,1653.7z"/>
+        			<path id="XMLID_3704_" class="st0" d="M2137.5,2262.3c-1-16.1-2.1-33-3.2-50.7c-2.7-35.1-3.8-73.5-8.6-112.8
+        				c-5.6-38.9-11.6-80-17.7-122.5c-5.8-30.7-22.9-102.8-33.6-146.2c-4.6-18.7-22.9-30.6-41.9-27.4l-58.1,9.7
+        				c-18.9,3.2-32.3,20.1-30.7,39.3c3.5,42.7,8.3,111.7,9.1,140.1c-0.8,39.3-1.5,77.2-2.3,113.2c-1.6,35.6-6.2,68.3-8.7,98.7
+        				c-1.4,15.1-2.8,29.6-4.1,43.3c-0.4,6.7-1.5,13.8-2.8,20.9c-1.2,7-2.3,13.8-3.4,20.4c-4.4,26.3-8.2,49.3-11.4,68.2
+        				c-6.3,37.8-9.9,59.4-9.9,59.4l227.6,19c0,0,0.1-21.9,0.2-60.3c0-19.2,0.1-42.5,0.2-69.2
+        				C2137.8,2291.9,2138.8,2278.8,2137.5,2262.3z"/>
+        			<g id="XMLID_3702_">
+        				<path id="XMLID_3703_" class="st0" d="M2063.9,2345.1c-90.7-39.3-197.1,2.7-236.4,93.4l-55.9,128.9l112.4,48.7l55.9-128.9
+        					c12.3-28.5,46.8-42.1,75.3-29.7c28.5,12.3,42.1,46.8,29.7,75.3l-55.9,128.9l112.4,48.7l55.9-128.9
+        					C2196.7,2490.8,2154.6,2384.4,2063.9,2345.1z"/>
+        			</g>
+
+        				<ellipse id="XMLID_3701_" transform="matrix(0.979 -0.2038 0.2038 0.979 -322.3775 444.5039)" class="st0" cx="1997.3" cy="1787.7" rx="32.9" ry="28.7"/>
+        		</g>
+        		<g id="XMLID_3694_">
+        			<path id="XMLID_3699_" class="st0" d="M269.5,1653.7c8.4-20.9,15.2-42.2,25.3-62.2c19-40.3,36.1-80.3,57.6-116.7
+        				c10.4-18.3,19.6-36.8,30.4-53.9c10.9-17,21.5-33.7,31.8-49.9c9.9-16.4,21.4-31.2,31.9-45.9c10.8-14.4,20.3-28.9,31.1-41.7
+        				c21-26,40.2-49.5,58.8-69.1c17.7-20.3,35.1-36.2,48.6-49.9c28.2-26.3,45.7-39.6,45.7-39.6s-15.1,15.9-38.4,46.1
+        				c-11.1,15.6-25.3,33.7-39.3,56.3c-14.9,21.8-29.7,47.8-45.7,75.9c-8.3,13.8-15.2,29.4-23.2,44.9c-7.7,15.6-16.3,31.4-23.1,48.6
+        				c-7.3,16.9-14.7,34.4-22.3,52.1c-7.5,17.8-13.3,36.8-20.2,55.6c-14.5,37.3-24.3,77.7-35.8,117.8c-6.3,19.9-9.3,41-13.9,61.5
+        				c-2.6,12.7-7.9,42-12,65.4c-2.9,16.9-19.8,27.5-36.3,23l-54.8-15c-16.2-4.4-25.3-21.7-19.7-37.6
+        				C253.9,1696.4,264.4,1666.9,269.5,1653.7z"/>
+        			<path id="XMLID_3698_" class="st0" d="M149.4,2262.3c1-16.1,2.1-33,3.2-50.7c2.7-35.1,3.8-73.5,8.6-112.8
+        				c5.6-38.9,11.6-80,17.7-122.5c5.8-30.7,22.9-102.8,33.6-146.2c4.6-18.7,22.9-30.6,41.9-27.4l58.1,9.7
+        				c18.9,3.2,32.3,20.1,30.7,39.3c-3.5,42.7-8.3,111.7-9.1,140.1c0.8,39.3,1.5,77.2,2.3,113.2c1.6,35.6,6.2,68.3,8.7,98.7
+        				c1.4,15.1,2.8,29.6,4.1,43.3c0.4,6.7,1.5,13.8,2.8,20.9c1.2,7,2.3,13.8,3.4,20.4c4.4,26.3,8.2,49.3,11.4,68.2
+        				c6.3,37.8,9.9,59.4,9.9,59.4l-227.6,19c0,0-0.1-21.9-0.2-60.3c0-19.2-0.1-42.5-0.2-69.2C149.1,2291.9,148.1,2278.8,149.4,2262.3z
+        				"/>
+        			<g id="XMLID_3696_">
+        				<path id="XMLID_3697_" class="st0" d="M223,2345.1c90.7-39.3,197.1,2.7,236.4,93.4l55.9,128.9l-112.4,48.7L347,2487.3
+        					c-12.3-28.5-46.8-42.1-75.3-29.7c-28.5,12.3-42.1,46.8-29.7,75.3l55.9,128.9l-112.4,48.7l-55.9-128.9
+        					C90.3,2490.8,132.3,2384.4,223,2345.1z"/>
+        			</g>
+
+        				<ellipse id="XMLID_3695_" transform="matrix(0.2038 -0.979 0.979 0.2038 -1523.0657 1700.3088)" class="st0" cx="283.8" cy="1786.5" rx="28.7" ry="29.4"/>
+        		</g>
+        		<polygon id="XMLID_3693_" class="st3" points="1254.9,1744.6 1163.1,1710.9 1241.4,1513.8 1002.6,1746.2 1094.4,1780
+        			1016.1,1977.1 		"/>
+        		<g id="XMLID_3688_">
+        			<path id="XMLID_3692_" class="st3" d="M873.5,1096.1l-45.5,78.6c-34.7,59.9,8.5,134.9,77.7,135l477.1,0.6
+        				c69.2,0.1,112.6-74.8,78.1-134.8l-45.6-79.2c-16.1-27.9-45.8-45.1-78-45.1h-386C919.3,1051.3,889.6,1068.4,873.5,1096.1z"/>
+        			<path id="XMLID_3691_" class="st2" d="M905.8,1274.9c-19.9,0-37.7-10.3-47.7-27.6c-9.9-17.3-9.9-37.8,0.1-55.1l45.5-78.6
+        				c9.8-16.9,28.1-27.5,47.7-27.5h386c19.6,0,37.9,10.6,47.7,27.6l45.6,79.2c9.9,17.2,9.9,37.8-0.1,55.1
+        				c-10,17.2-27.8,27.5-47.7,27.5L905.8,1274.9z"/>
+        			<g id="XMLID_3689_">
+        				<path id="XMLID_3690_" class="st3" d="M1400.6,1210.3l-45.6-79.2c-3.6-6.2-10.3-10.1-17.5-10.1H1303c8,0,15.4,4.3,19.4,11.2
+        					l50.5,87.8c3.8,6.5,3.9,13.9,0.7,20.6l9.3,0c7.4,0,13.8-3.7,17.5-10.1C1404.3,1224.1,1404.3,1216.7,1400.6,1210.3z"/>
+        			</g>
+        		</g>
+        		<g id="XMLID_3683_">
+        			<g id="XMLID_3686_">
+        				<path id="XMLID_3687_" class="st3" d="M1751.6,1188c-4.1,0-7.8-2.9-8.6-7.2c-2.4-12.6-6.7-24.5-12.8-35.3
+        					c-2.4-4.2-0.9-9.6,3.3-12c4.2-2.4,9.6-0.9,12,3.3c7.1,12.5,12.1,26.2,14.8,40.7c0.9,4.8-2.2,9.4-7,10.3
+        					C1752.7,1187.9,1752.1,1188,1751.6,1188z"/>
+        			</g>
+        			<g id="XMLID_3684_">
+        				<path id="XMLID_3685_" class="st3" d="M1721.7,1127.7c-2.4,0-4.8-1-6.5-2.9c-31.4-34.8-76.3-45.4-76.7-45.5
+        					c-4.7-1.1-7.7-5.8-6.6-10.5c1.1-4.7,5.9-7.7,10.5-6.6c2.1,0.5,50.8,12,85.9,50.9c3.2,3.6,2.9,9.2-0.7,12.4
+        					C1725.9,1126.9,1723.8,1127.7,1721.7,1127.7z"/>
+        			</g>
+        		</g>
+        		<g id="XMLID_3678_">
+        			<g id="XMLID_3681_">
+        				<path id="XMLID_3682_" class="st3" d="M504.4,1188c-0.5,0-1.1,0-1.6-0.1c-4.8-0.9-7.9-5.5-7-10.3c2.7-14.5,7.7-28.2,14.8-40.7
+        					c2.4-4.2,7.8-5.7,12-3.3c4.2,2.4,5.7,7.7,3.3,12c-6.1,10.9-10.5,22.7-12.8,35.3C512.3,1185.1,508.6,1188,504.4,1188z"/>
+        			</g>
+        			<g id="XMLID_3679_">
+        				<path id="XMLID_3680_" class="st3" d="M534.3,1127.7c-2.1,0-4.2-0.7-5.9-2.3c-3.6-3.2-3.9-8.8-0.7-12.4
+        					c35-38.9,83.8-50.4,85.9-50.9c4.6-1.1,9.4,1.9,10.5,6.6c1.1,4.7-1.9,9.4-6.6,10.5c-0.4,0.1-45.5,10.9-76.7,45.5
+        					C539.1,1126.7,536.7,1127.7,534.3,1127.7z"/>
+        			</g>
+        		</g>
+        	</g>
+        </g>
+        </svg>
+      </div>
       <form class="contact-form scrollnimate">
-        <label><div>Your Name, good Fellow</div>
+        <label><div>Your Name, good Person</div>
           <input type="name" id="contact_name" name="name" class="form-input" placeholder="Name">
         </label>
-        <label><div>Your Email, surely you have one?</div>
+        <label><div>Your Email? Surely you have one?</div>
           <input type="email" id="contact_email" name="email" class="form-input" placeholder="Email">
         </label>
-        <label><div>Your Message, I will pass it along faithfully</div>
+        <label><div>Your Message? I will pass it along faithfully</div>
           <textarea id="contact_message" name="message" class="form-input" placeholder="Your message"></textarea>
         </label>
+        <div>
+          <button type="submit" class="btn btn-border submit-btn">Send</button>
+        </div>
       </form>
     </div>
   </div>
 </div>
-<div class="section-group pictures">
-  <img src="/img/rotary_drawing.png" class="stagger-left" style="position:absolute; top: -50vh;">
+<div class="section-group pictures section-group-no-min">
+  <img src="/img/rotary_drawing.png" class="stagger-left rotary-up">
 </div>
