updates to portfolio and contact page

--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -29,7 +29,7 @@ layout: master.html
   <div class="content">
     <div class="content_text">
       <h1 id="headlineRobot" class="headline scrollnimate portfolio-headline" data-magic-number="-8">Meet FøRM,<small>He will be helping us today</small></h1>
-      <div class="frm-robot scrollnimate" data-magic-number="-3.5">
+      <div class="frm-robot " data-magic-number="-3.5">
         <?xml version="1.0" encoding="utf-8"?>
         <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
         <svg version="1.1" id="robot" class="chilling" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -210,7 +210,7 @@ layout: master.html
       </form>
       <div class="message-success" id="message-success">
         <h4>Thanks for the message!</h4>
-        <p>I will get back with you as soon as possible</p>
+        <p>I will get back with you as soon as possible.</p>
     </div>
   </div>
 </div>
