--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,9 @@ layout: master.html
   <div class="content">
     <div class="content_text">
       <h1 class="headline scrollnimate" data-magic-number="-8" id="main-header">Hi, I'm Joey</h1>
-      <p class="tagline  thin scrollnimate" data-magic-number="-5" >I am a creative full-stack developer.
+      <p class="tagline  thin scrollnimate" data-magic-number="-5" >I'm a full-stack web developer and designer.
         I write code in JavaScript, HTML, Sass, and PHP.
-      </p>
-      <p class="tagline  thin scrollnimate" data-magic-number="-5" >I take projects from inception through completion and can assist in all
+    I take projects from inception through completion and assist in all
         stages of design and development.
         <br><br><br>
         <a href="/portfolio/" class="btn btn-border">View Portfolio</a>
@@ -25,7 +24,7 @@ layout: master.html
      </div>
      <div class="content_img_box no-select">
        <a class="img_handle" onmouseover="window.JL.achievements.activateAchievement('HOVERER')" id="hover-picture"></a>
-       <img src="/img/me.png" class="content_img lightbox">
+       <img src="/img/dark_glitter.jpg" class="content_img lightbox">
      </div>
    </div>
 </div>
