--- a/src/portfolio/jl-v2/index.html
+++ b/src/portfolio/jl-v2/index.html
@@ -17,10 +17,21 @@ layout: master.html
     <div class="content_text">
       <h1 class="headline scrollnimate portfolio-headline" data-magic-number="-8">JL V2</h1>
       <p class="tagline scrollnimate" data-magic-number="100" >
-This was a very short lived portfolio website.  It was built in Nov 2015 and was removed in Feburary 2016.  It was inspired by Google Ventures' website. 
+This was a very short lived portfolio website.  It was built in Nov 2015 and was removed in Feburary 2016.  It was inspired by Google Ventures' website.
         <br><br><br>
         <a href="http://v2.joeylea.com/" class="btn btn-border" target="_blank">Visit Website</a>
       </p>
+      <div class="project-screenshots">
+        <div class="thumb">
+          <img src="/img/jl2_sss_1.png" title="JL2 Homepage Screenshot">
+        </div>
+        <div class="thumb">
+          <img src="/img/jl2_sss_2.png" title="JL2 Contact Page Screenshot">
+        </div>
+        <div class="thumb">
+          <img src="/img/jl2_sss_3.png" title="JL2 Blog Page Screenshot">
+        </div>
+      </div>
    </div>
  </div>
 </div>
